--- a/app/views/component/_navbar.html.erb
+++ b/app/views/component/_navbar.html.erb
@@ -7,96 +7,16 @@
       <span class="ml-3 text-xl">Gestion Humana App</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <div class="dropdown inline-block relative z-40">
-        <button class="bg-red-500 text-white font-semibold py-2 px-4 rounded inline-flex items-center">
-          <span>Menu</span>
-        </button>
-        <ul class="dropdown-content absolute hidden text-white pt-1">
-
-          <li class="dropdown">
-            <%= link_to "Vacaciones", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-            <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-              <li class="dropdown">
-                <%= link_to "Solicitudes", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Ver", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <%= link_to "Acciones", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Listado", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                  <li><%= link_to "agregar", new_type_vacation_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="dropdown">
-            <%= link_to "Certificado", directed_certificates_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-            <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-              <li class="dropdown">
-                <%= link_to "Solicitudes", directed_certificates_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Ver", directed_certificates_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <%= link_to "Acciones", directed_certificates_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Listado", directed_certificates_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                  <li><%= link_to "agregar", new_directed_certificate_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="dropdown">
-            <%= link_to "Solicitudes", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-            <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-              <li class="dropdown">
-                <%= link_to "Solicitudes", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Ver", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <%= link_to "Acciones", type_vacations_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Listado", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                  <li><%= link_to "agregar", new_type_request_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <li class="dropdown">
-            <%= link_to "Permisos", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-            <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-              <li class="dropdown">
-                <%= link_to "Solicitudes", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "Ver", type_requests_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <%= link_to "Motivo", reason_permissions_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "agregar", new_type_request_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <%= link_to "Tipo", type_permissions_path, class: "bg-red-200 hover:bg-red-400 py-2 px-5 block whitespace-no-wrap" %>
-                <ul class="dropdown-content absolute hidden text-white pl-6 ml-24 -mt-10">
-                  <li><%= link_to "agregar", new_reason_permission_path, class: "bg-red-200 hover:bg-red-400 py-2 px-4 block whitespace-no-wrap" %></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-        </ul>
-      </div>
+      <%= link_to "Solicitudes", type_requests_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Vacaciones", type_vacations_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Motivo Permisos", reason_permissions_path, class: "mr-5 text-red-700 hover:red-gray-900" %>
+      <%= link_to "Tipo Permisos", type_permissions_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Certificados", directed_certificates_path, class: "mr-5 text-red-700 hover:text-red-900" %>
     </nav>
-    <%= link_to "Salir",  root_path, class: "text-red-500 hover:text-green-400 font-bold" %>
+    <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Salir
+      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+        <path d="M5 12h14M12 5l7 7-7 7"></path>
+      </svg>
+    </button>
   </div>
 </header>
