--- a/app/views/component/_navbar.html.erb
+++ b/app/views/component/_navbar.html.erb
@@ -7,11 +7,11 @@
       <span class="ml-3 text-xl">Gestion Humana App</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <%= link_to "Solicitudes", type_requests_path, class: "mr-5 text-red-700 hover:text-red-900" %>
-      <%= link_to "Vacaciones", type_vacations_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Tipos Solicitudes", type_requests_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Tipo Vacaciones", type_vacations_path, class: "mr-5 text-red-700 hover:text-red-900" %>
       <%= link_to "Motivo Permisos", reason_permissions_path, class: "mr-5 text-red-700 hover:red-gray-900" %>
       <%= link_to "Tipo Permisos", type_permissions_path, class: "mr-5 text-red-700 hover:text-red-900" %>
-      <%= link_to "Certificados", directed_certificates_path, class: "mr-5 text-red-700 hover:text-red-900" %>
+      <%= link_to "Dirigido Certificados", directed_certificates_path, class: "mr-5 text-red-700 hover:text-red-900" %>
     </nav>
     <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Salir
       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
